@@ -1,3 +1,8 @@
+2004-01-23  David Carlton  <carlton@kealia.com>
+
+	* gdb.cp/namespace.cc (C::ensureRefs): New.
+	* gdb.cp/namespace1.cc (C::ensureOtherRefs): New.
+
 2004-01-20  Nick Roberts  <nick@nick.uklinux.net>
 
 	* gdb.mi/mi-stack.exp (test_stack_locals_listing): Test for
